--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,3 +1,4 @@
+<!--bio-->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -23,28 +24,18 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="index.html">Home</a>
+					<a href="/">Home</a>
 				</li>
 				<li><a href="Portfolio.html">Portfolio</a>
 				</li>
 			</ul>
 		</nav>
         <p>
-			Welcome! I'm Philip, a masters student at the University of Wisconsin- Madison, interested in geospatial data and visualization. 
-			Ever since I was young, I've been interested in geography as a general discipline. 
-			My AP Human Geography class in high school was an extremely formative time, paving the way for my college career and professional path.
-			It was there that I really got invested in geography, and learned about GIS, which thus eventually led to my time at the UW.
-			I hope to help move the world forward, both in terms of compiling and analyzing geospatial data, as well as by representing it through maps and other visualization.
-			Through maps, we can show the world as it's been, as it is, and how it could be. 
-			Maps can be a driving force for change, galvanizing the people to action, when they are created effectively.
-			I strive to always be an effective creator, an effective analyzer, so that the world may have a brighter future.
-			Thank you for viewing this page, and I hope you will also work towards a better tomorrow.
+			Welcome to an snapshot overview of my project history. 
+			Feel free to explore these maps, and develop a sense of my skills, interests, and project history, ranging from print maps to interactive web pages.
+			If you'd like to see more, feel free to reach out for more indepth insight as to these maps, as well as numerous others I've created over time.
 		</p>
-		<!--<div class="col-md-12 col-xs-12"><img src="assets/Philip_Master_Resume.png" width=100% height="350px"></div>-->
-			RESUME TEXT HERE?
-			<!--My full resume can be viewed <a href="assets/Philip_Master_Resume.pdf">here</a>.-->
-		</p>
-		<!--<div class="container-fluid">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="75%" height="350px"></div>
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_2.png" width="75%" height="350px"></div>
@@ -58,12 +49,13 @@
 			</div>
 			<div class="row">
 					<div class="col-md-3 col-xs-12"><img src="assets/Trash_Suggestion_Produced.png" width="100%" height="450px"></div>
-					<div class="col-md-3 col-xs-12"><img src="assets/Waste_Bank_Locations.PNG" width="100%" height="380px"></div>
+					<div class="col-md-3 col-xs-12"><img src="assets/Waste_Bank_Locations.png" width="100%" height="380px"></div>
 					<div class="col-md-4 col-xs-12">These maps are outputs from a team project I worked on focusing on the problem of waste management in Jakarta, Indonesia. 
 						By analyzing how much trash was produced in the city, and where people produced it, we determined which trash collection locations were under the greatest strain. 
 						From there, we were able to suggest additional trash collection locations to ease the strain and manage the waste more effectively. 
 						We also determined where additional Waste Banks could be located to better manage recycle, cleaning up the environment and bolstering the economy. 
-						The full report can be seen <a href=assets/Indonesia_Waste_Management_Report.pdf>here</a>.</div>	
+						<!--The full report can be seen <a href="assets/Indonesia_Waste_Management_Report.pdf">here</a>.-->
+					</div>	
 			 </div>
 			 <div class="row">
 					<div class="col-md-6 col-xs-12"><img src="assets/Everest_1.png" width="100%" height="400px"></div>
@@ -72,8 +64,9 @@
 						It depicts the ideal climbing route along the South Col route, from base camp to the summit, detailing important points along the way, such as camp locations and terrain features.
 						This map is intended to be both educational to those who wish to learn more about climbing the tallest mountain in the world, as well as inform and assist those preparing for the ascent.
 						Interactive features to assist these goals include pan and zoom functions, elevation isolines, route animation, current weather conditions, and several other features.						
-					</div>	
-			 </div>-->
+                        TESTING TESTING TESTING
+                    </div>	
+			 </div>
 		</div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
