--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 			RESUME TEXT HERE?
 			<!--My full resume can be viewed <a href="assets/Philip_Master_Resume.pdf">here</a>.-->
 		</p>
+
+		<footer>
+			<p>For any inquires, questions, or comments, feel free to contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
+		</footer>
 		<!--<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="75%" height="350px"></div>
