--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,7 +12,7 @@
 		<!--   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
 		<link rel="stylesheet" href="css/bootstrap-reboot.min.css">   -->
 
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/Port_style.css">
 		<!--[if IE<9]>
 			<link rel="stylesheet" href="css/style.ie.css">
 		<![endif]-->
@@ -24,32 +24,32 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="/">Home</a>
+					<a href="index.html">Home</a>
 				</li>
 				<li><a href="Portfolio.html">Portfolio</a>
 				</li>
 			</ul>
 		</nav>
         <p>
-			Welcome to an snapshot overview of my project history. 
+			Welcome to a snapshot overview of my project history. 
 			Feel free to explore these maps, and develop a sense of my skills, interests, and project history, ranging from print maps to interactive web pages.
 			If you'd like to see more, feel free to reach out for more indepth insight as to these maps, as well as numerous others I've created over time.
 		</p>
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="75%" height="350px"></div>
-				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_2.png" width="75%" height="350px"></div>
+				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="100%" height="100%"></div>
+				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_2.png" width="100%" height="100%"></div>
 				<div class="col-md-12 col-xs-12">Nuclear Power is an extremely underutilized energy source. These are selected portions of a persuasive infographic, which is intended to educate readers about the benefits of nuclear power, compared to fossil fuels. 
 					It utilizes both maps and graphics to make this argument in a push for a greener tomorrow. The infograph can be viewed in its entirety <a href=assets/Nuclear_Power.png>here</a>.</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-xs-12"><img src="assets/Madison_Grocery.png" width="100%" height="450px"></div>
+				<div class="col-md-6 col-xs-12"><img src="assets/Madison_Grocery.png" width="100%" height="100%"></div>
 				<div class="col-md-4 col-xs-12">Food is a necessity for everyone, but many are on a budget, especially college students. 
 					This project assists students, and others, in Madison to make economic choices when shopping for groceries by identifying those stores that have consistently good prices, and those that are more expensive.</div>	
 			</div>
 			<div class="row">
-					<div class="col-md-3 col-xs-12"><img src="assets/Trash_Suggestion_Produced.png" width="100%" height="450px"></div>
-					<div class="col-md-3 col-xs-12"><img src="assets/Waste_Bank_Locations.png" width="100%" height="380px"></div>
+					<div class="col-md-4 col-xs-12"><img src="assets/Trash_Suggestion_Produced.png" width="100%" height="100%"></div>
+					<div class="col-md-4 col-xs-12"><img src="assets/Waste_Bank_Locations.png" width="100%" height="85%"></div>
 					<div class="col-md-4 col-xs-12">These maps are outputs from a team project I worked on focusing on the problem of waste management in Jakarta, Indonesia. 
 						By analyzing how much trash was produced in the city, and where people produced it, we determined which trash collection locations were under the greatest strain. 
 						From there, we were able to suggest additional trash collection locations to ease the strain and manage the waste more effectively. 
@@ -58,8 +58,8 @@
 					</div>	
 			 </div>
 			 <div class="row">
-					<div class="col-md-6 col-xs-12"><img src="assets/Everest_1.png" width="100%" height="400px"></div>
-					<div class="col-md-6 col-xs-12"><img src="assets/Everest_2.png" width="100%" height="400px"></div>
+					<div class="col-md-6 col-xs-12"><img src="assets/Everest_1.png" width="100%" height="100%"></div>
+					<div class="col-md-6 col-xs-12"><img src="assets/Everest_2.png" width="100%" height="100%"></div>
 					<div class="col-md-12 col-xs-12">These images are of an interactive Everest map I assisted my team in the creation of. 
 						It depicts the ideal climbing route along the South Col route, from base camp to the summit, detailing important points along the way, such as camp locations and terrain features.
 						This map is intended to be both educational to those who wish to learn more about climbing the tallest mountain in the world, as well as inform and assist those preparing for the ascent.
@@ -68,6 +68,10 @@
                     </div>	
 			 </div>
 		</div>
+
+		<footer>
+				<p>For any inquires, questions, or comments, feel free to contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
+		</footer>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 
