--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<body>
 		<!--put your initial page content here-->
-		<h1>Welcome</h1>
+		<h1>Welcome To My World!</h1>
 		<nav>
 			<ul>
 				<li>
@@ -37,11 +37,11 @@
 			I hope to help move the world forward, both in terms of compiling and analyzing geospatial data, as well as by representing it through maps and other visualization.
 			Through maps, we can show the world as it's been, as it is, and how it could be. 
 			Maps can be a driving force for change, galvanizing the people to action, when they are created effectively.
-			I strive to always be an effective creator, an effective analyzer, so that the world may have a brighter future.
+			I strive to always be an effective creator and analyzer, so that the world may have a brighter future.
 			Thank you for viewing this page, and I hope you will also work towards a better tomorrow.
 		</p>
 		<!--<div class="col-md-12 col-xs-12"><img src="assets/Philip_Master_Resume.png" width=100% height="350px"></div>-->
-			RESUME TEXT HERE?
+			<p>RESUME TEXT HERE?</p>
 			<!--My full resume can be viewed <a href="assets/Philip_Master_Resume.pdf">here</a>.-->
 		</p>
 
