--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,6 +21,7 @@
 	<body>
 		<!--put your initial page content here-->
 		<h1>Oh, The Places I've Mapped</h1>
+		<p>Philip Bliese</p>
 		<nav>
 			<ul>
 				<li>
@@ -31,7 +32,7 @@
 			</ul>
 		</nav>
         <p>
-			Welcome to a snapshot overview of my project history. 
+			Welcome to a snapshot of various projects I've created. 
 			Feel free to explore these maps, and develop a sense of my skills, interests, and project history, ranging from print maps to interactive web pages.
 			If you'd like to see more, feel free to reach out for more indepth insight as to these maps, as well as numerous others I've created over time.
 		</p>
@@ -43,18 +44,19 @@
 					It utilizes both maps and graphics to make this argument in a push for a greener tomorrow. The infograph can be viewed in its entirety <a href=assets/Nuclear_Power.png>here</a>.</div>
 			</div>
 			<div class="row">
+				<div class="col-md-3"></div>
 				<div class="col-md-6 col-xs-12"><img src="assets/Madison_Grocery.png" width="100%" height="100%"></div>
-				<div class="col-md-4 col-xs-12">Food is a necessity for everyone, but many are on a budget, especially college students. 
+				<div class="col-md-12 col-xs-12">Food is a necessity for everyone, but many are on a budget, especially college students. 
 					This project assists students, and others, in Madison to make economic choices when shopping for groceries by identifying those stores that have consistently good prices, and those that are more expensive.</div>	
 			</div>
 			<div class="row">
-					<div class="col-md-4 col-xs-12"><img src="assets/Trash_Suggestion_Produced.png" width="100%" height="100%"></div>
-					<div class="col-md-4 col-xs-12"><img src="assets/Waste_Bank_Locations.png" width="100%" height="85%"></div>
-					<div class="col-md-4 col-xs-12">These maps are outputs from a team project I worked on focusing on the problem of waste management in Jakarta, Indonesia. 
+					<div class="col-md-6 col-xs-12"><img src="assets/Trash_Suggestion_Produced.png" width="100%" height="100%"></div>
+					<div class="col-md-6 col-xs-12"><img src="assets/Waste_Bank_Locations.png" width="100%" height="100%"></div>
+					<div class="col-md-12 col-xs-12">These maps are outputs from a team project I worked on focusing on the problem of waste management in Jakarta, Indonesia. 
 						By analyzing how much trash was produced in the city, and where people produced it, we determined which trash collection locations were under the greatest strain. 
 						From there, we were able to suggest additional trash collection locations to ease the strain and manage the waste more effectively. 
 						We also determined where additional Waste Banks could be located to better manage recycle, cleaning up the environment and bolstering the economy. 
-						<!--The full report can be seen <a href="assets/Indonesia_Waste_Management_Report.pdf">here</a>.-->
+						The full report can be seen <a href="assets/Indonesia_Report.pdf">here</a>.
 					</div>	
 			 </div>
 			 <div class="row">
@@ -63,8 +65,7 @@
 					<div class="col-md-12 col-xs-12">These images are of an interactive Everest map I assisted my team in the creation of. 
 						It depicts the ideal climbing route along the South Col route, from base camp to the summit, detailing important points along the way, such as camp locations and terrain features.
 						This map is intended to be both educational to those who wish to learn more about climbing the tallest mountain in the world, as well as inform and assist those preparing for the ascent.
-						Interactive features to assist these goals include pan and zoom functions, elevation isolines, route animation, current weather conditions, and several other features.						
-                        TESTING TESTING TESTING
+						Interactive features to assist these goals include pan and zoom functions, elevation isolines, route animation, current weather conditions, and several other features.
                     </div>	
 			 </div>
 		</div>
