--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<body>
 		<!--put your initial page content here-->
 		<h1>Welcome To My World!</h1>
+		<p>Philip Bliese</p>
 		<nav>
 			<ul>
 				<li>
@@ -30,7 +31,7 @@
 			</ul>
 		</nav>
         <p>
-			Welcome! I'm Philip, a masters student at the University of Wisconsin- Madison, interested in geospatial data and visualization. 
+			Glad you could make it! I'm Philip, a masters student at the University of Wisconsin- Madison, interested in geospatial data and visualization. 
 			Ever since I was young, I've been interested in geography as a general discipline. 
 			My AP Human Geography class in high school was an extremely formative time, paving the way for my college career and professional path.
 			It was there that I really got invested in geography, and learned about GIS, which thus eventually led to my time at the UW.
@@ -40,13 +41,14 @@
 			I strive to always be an effective creator and analyzer, so that the world may have a brighter future.
 			Thank you for viewing this page, and I hope you will also work towards a better tomorrow.
 		</p>
-		<!--<div class="col-md-12 col-xs-12"><img src="assets/Philip_Master_Resume.png" width=100% height="350px"></div>-->
-			<p>RESUME TEXT HERE?</p>
-			<!--My full resume can be viewed <a href="assets/Philip_Master_Resume.pdf">here</a>.-->
+		<div class="col-md-12 col-xs-12"><img src="assets/Resume_2.png" width=100% height="100%"></div>
+		<p>As you can see, I've had a very diverse background in both education and work, which has given me the opportunity to visit many different places and analyze from many different angles.
+			This has allowed me to broaden my worldview, and has benefited my work significantly.
+		My resume can be viewed separately <a href="assets/Resume_2.pdf">here</a>.
 		</p>
 
 		<footer>
-			<p>For any inquires, questions, or comments, feel free to contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
+			<p>For any inquires, questions, or comments, please feel free to contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
 		</footer>
 		<!--<div class="container-fluid">
 			<div class="row">
