--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,7 +21,7 @@
 	<body>
 		<!--put your initial page content here-->
 		<h1>Oh, The Places I've Mapped</h1>
-		<p>Philip Bliese</p>
+		<p>Philip Bliese<br>Analyze & Visualize</p>
 		<nav>
 			<ul>
 				<li>
@@ -32,22 +32,25 @@
 			</ul>
 		</nav>
         <p>
-			Welcome to a snapshot of various projects I've created. 
+			Welcome to a snapshot of a few of the various projects I've created. 
 			Feel free to explore these maps, and develop a sense of my skills, interests, and project history, ranging from print maps to interactive web pages.
-			If you'd like to see more, feel free to reach out for more indepth insight as to these maps, as well as numerous others I've created over time.
+			If you'd like to see more, feel free to reach out for more in-depth insight as to these maps, as well as numerous others I've created over time.
 		</p>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="100%" height="100%"></div>
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_2.png" width="100%" height="100%"></div>
-				<div class="col-md-12 col-xs-12">Nuclear Power is an extremely underutilized energy source. These are selected portions of a persuasive infographic, which is intended to educate readers about the benefits of nuclear power, compared to fossil fuels. 
-					It utilizes both maps and graphics to make this argument in a push for a greener tomorrow. The infograph can be viewed in its entirety <a href=assets/Nuclear_Power.png>here</a>.</div>
+				<div class="col-md-12 col-xs-12">Nuclear Power is an extremely underutilized energy source in the U.S. today. 
+					These are selected portions of a persuasive infographic, which is intended to educate readers about the benefits of nuclear power, compared to fossil fuels.
+					Nuclear power is superior to fossil fuels in virtually every category, but is not used nearly as much. As such, I created this infograph to argue that nuclear energy should be expanded in the U.S..
+					It utilizes both maps and graphics to push for this, and a greener tomorrow. The infograph can be viewed in its entirety <a href=assets/Nuclear_Power.png>here</a>.</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3"></div>
 				<div class="col-md-6 col-xs-12"><img src="assets/Madison_Grocery.png" width="100%" height="100%"></div>
-				<div class="col-md-12 col-xs-12">Food is a necessity for everyone, but many are on a budget, especially college students. 
-					This project assists students, and others, in Madison to make economic choices when shopping for groceries by identifying those stores that have consistently good prices, and those that are more expensive.</div>	
+				<div class="col-md-12 col-xs-12">Food is a necessity for everyone, but many are on a budget, especially college students. Due to that, these individuals need to make smart choices when deciding what they will eat in the near future.
+					This project assists students, and others, in Madison to make these economic choices when shopping for groceries by identifying those stores that have consistently good prices, and those that are more expensive.
+					Using this, they can make wise decisions for themselves and their checkbook.</div>	
 			</div>
 			<div class="row">
 					<div class="col-md-6 col-xs-12"><img src="assets/Trash_Suggestion_Produced.png" width="100%" height="100%"></div>
