--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 		<!--put your initial page content here-->
 		<h1>Welcome To My World!</h1>
-		<p>Philip Bliese</p>
+		<p>Philip Bliese<br>Analyze & Visualize</p>
 		<nav>
 			<ul>
 				<li>
@@ -31,20 +31,17 @@
 			</ul>
 		</nav>
         <p>
-			Glad you could make it! I'm Philip, a masters student at the University of Wisconsin- Madison, interested in geospatial data and visualization. 
-			Ever since I was young, I've been interested in geography as a general discipline. 
-			My AP Human Geography class in high school was an extremely formative time, paving the way for my college career and professional path.
-			It was there that I really got invested in geography, and learned about GIS, which thus eventually led to my time at the UW.
-			I hope to help move the world forward, both in terms of compiling and analyzing geospatial data, as well as by representing it through maps and other visualization.
-			Through maps, we can show the world as it's been, as it is, and how it could be. 
-			Maps can be a driving force for change, galvanizing the people to action, when they are created effectively.
+			Glad you could make it! I'm Philip, a masters student at the University of Wisconsin- Madison, interested in geospatial data and visualization.  
+			I've always enjoyed geography, but during high school I became significantly more invested in geography and GIS, which has led me to today.
+			I seek to help move the world forward, in terms of both compiling and analyzing geospatial data, as well as by representing it through maps and other visualization.
+			Through maps, a driving force for change, we can visualize the world as it's been, as it is, and how it could be. 
 			I strive to always be an effective creator and analyzer, so that the world may have a brighter future.
 			Thank you for viewing this page, and I hope you will also work towards a better tomorrow.
 		</p>
 		<div class="col-md-12 col-xs-12"><img src="assets/Resume_2.png" width=100% height="100%"></div>
 		<p>As you can see, I've had a very diverse background in both education and work, which has given me the opportunity to visit many different places and analyze from many different angles.
 			This has allowed me to broaden my worldview, and has benefited my work significantly.
-		My resume can be viewed separately <a href="assets/Resume_2.pdf">here</a>.
+		My resume can be viewed separately <a href="assets/Philip_Resume.pdf">here</a>.
 		</p>
 
 		<footer>
