--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,6 +12,7 @@
 		<!--   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
 		<link rel="stylesheet" href="css/bootstrap-reboot.min.css">   -->
 
+		<!--Separate stylesheet from index just in case things need to be specialized-->
 		<link rel="stylesheet" href="css/Port_style.css">
 		<!--[if IE<9]>
 			<link rel="stylesheet" href="css/style.ie.css">
@@ -20,6 +21,7 @@
 
 	<body>
 		<!--put your initial page content here-->
+		<!--Another fun title, keep motto consistent, identify self-->
 		<h1>Oh, The Places I've Mapped</h1>
 		<p>Philip Bliese<br>Analyze & Visualize</p>
 		<nav>
@@ -36,6 +38,7 @@
 			Feel free to explore these maps, and develop a sense of my skills, interests, and project history, ranging from print maps to interactive web pages.
 			If you'd like to see more, feel free to reach out for more in-depth insight as to these maps, as well as numerous others I've created over time.
 		</p>
+		<!--Use fluid container, colums to style across devices-->
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="100%" height="100%"></div>
@@ -45,6 +48,7 @@
 					Nuclear power is superior to fossil fuels in virtually every category, but is not used nearly as much. As such, I created this infograph to argue that nuclear energy should be expanded in the U.S..
 					It utilizes both maps and graphics to push for this, and a greener tomorrow. The infograph can be viewed in its entirety <a href=assets/Nuclear_Power.png>here</a>.</div>
 			</div>
+			<!--Add separate links for larger files when needed, try to keep images on one line and text below-->
 			<div class="row">
 				<div class="col-md-3"></div>
 				<div class="col-md-6 col-xs-12"><img src="assets/Madison_Grocery.png" width="100%" height="100%"></div>
@@ -72,7 +76,7 @@
                     </div>	
 			 </div>
 		</div>
-
+		<!--Footer with contact info, same as index-->
 		<footer>
 				<p>For any inquires, questions, or comments, feel free to contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
 		</footer>
