--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
 	<body>
 		<!--put your initial page content here-->
+		<!--Header to welcome to the page, also create a sort of brand/motto-->
 		<h1>Welcome To My World!</h1>
 		<p>Philip Bliese<br>Analyze & Visualize</p>
+		<!--Navigation bar to flesh out site, simplify page contents, specialize pages-->
 		<nav>
 			<ul>
 				<li>
@@ -38,45 +40,16 @@
 			I strive to always be an effective creator and analyzer, so that the world may have a brighter future.
 			Thank you for viewing this page, and I hope you will also work towards a better tomorrow.
 		</p>
+		<!--Intro as well as resume so people get an immediate solid idea of who I am-->
 		<div class="col-md-12 col-xs-12"><img src="assets/Resume_2.png" width=100% height="100%"></div>
 		<p>As you can see, I've had a very diverse background in both education and work, which has given me the opportunity to visit many different places and analyze from many different angles.
 			This has allowed me to broaden my worldview, and has benefited my work significantly.
 		My resume can be viewed separately <a href="assets/Philip_Resume.pdf">here</a>.
 		</p>
-
+		<!--Add resume for download, separate viewing if desired, also contact info for email-->
 		<footer>
 			<p>For any inquires, questions, or comments, please feel free to contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
 		</footer>
-		<!--<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="75%" height="350px"></div>
-				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_2.png" width="75%" height="350px"></div>
-				<div class="col-md-12 col-xs-12">Nuclear Power is an extremely underutilized energy source. These are selected portions of a persuasive infographic, which is intended to educate readers about the benefits of nuclear power, compared to fossil fuels. 
-					It utilizes both maps and graphics to make this argument in a push for a greener tomorrow. The infograph can be viewed in its entirety <a href=assets/Nuclear_Power.png>here</a>.</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-xs-12"><img src="assets/Madison_Grocery.png" width="100%" height="450px"></div>
-				<div class="col-md-4 col-xs-12">Food is a necessity for everyone, but many are on a budget, especially college students. 
-					This project assists students, and others, in Madison to make economic choices when shopping for groceries by identifying those stores that have consistently good prices, and those that are more expensive.</div>	
-			</div>
-			<div class="row">
-					<div class="col-md-3 col-xs-12"><img src="assets/Trash_Suggestion_Produced.png" width="100%" height="450px"></div>
-					<div class="col-md-3 col-xs-12"><img src="assets/Waste_Bank_Locations.PNG" width="100%" height="380px"></div>
-					<div class="col-md-4 col-xs-12">These maps are outputs from a team project I worked on focusing on the problem of waste management in Jakarta, Indonesia. 
-						By analyzing how much trash was produced in the city, and where people produced it, we determined which trash collection locations were under the greatest strain. 
-						From there, we were able to suggest additional trash collection locations to ease the strain and manage the waste more effectively. 
-						We also determined where additional Waste Banks could be located to better manage recycle, cleaning up the environment and bolstering the economy. 
-						The full report can be seen <a href=assets/Indonesia_Waste_Management_Report.pdf>here</a>.</div>	
-			 </div>
-			 <div class="row">
-					<div class="col-md-6 col-xs-12"><img src="assets/Everest_1.png" width="100%" height="400px"></div>
-					<div class="col-md-6 col-xs-12"><img src="assets/Everest_2.png" width="100%" height="400px"></div>
-					<div class="col-md-12 col-xs-12">These images are of an interactive Everest map I assisted my team in the creation of. 
-						It depicts the ideal climbing route along the South Col route, from base camp to the summit, detailing important points along the way, such as camp locations and terrain features.
-						This map is intended to be both educational to those who wish to learn more about climbing the tallest mountain in the world, as well as inform and assist those preparing for the ascent.
-						Interactive features to assist these goals include pan and zoom functions, elevation isolines, route animation, current weather conditions, and several other features.						
-					</div>	
-			 </div>-->
 		</div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
