572 final project update
Added portfolio section for final project in 572- Craft Beer timeline infograph. Screenshots, explanatory text.

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,6 +41,14 @@
 		<!--Use fluid container, colums to style across devices-->
 		<div class="container-fluid">
 			<div class="row">
+				<div class="col-md-6 col-xs-12"><img src="assets/Beer_1.png" width="100%" height="100%"></div>
+				<div class="col-md-6 col-xs-12"><img src="assets/Beer_2.png" width="100%" height="100%"></div>
+				<div class="col-md-12 col-xs-12">Good food and drink is always welcome, but great craft beer is a particular favorite of mine. 
+					But craft beer hasn't been around forever, so how did we get to where we are today? How did Prohibition, and the recovery from it, affect today's market?
+					These questions, and more, are investigated in this infograph, A History of (Craft) Beer in America.
+					The infograph can be viewed in its entirety <a href=assets/Craft_Beer.png>here</a>.</div>
+			</div>
+			<div class="row">
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_1.png" width="100%" height="100%"></div>
 				<div class="col-md-6 col-xs-12"><img src="assets/Nuclear_2.png" width="100%" height="100%"></div>
 				<div class="col-md-12 col-xs-12">Nuclear Power is an extremely underutilized energy source in the U.S. today. 
