--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,6 +41,18 @@
 		<!--Use fluid container, colums to style across devices-->
 		<div class="container-fluid">
 			<div class="row">
+				<div class="col-md-12 col-xs-12"><img src="assets/LCMS_1.png" width="100%" height="100%"></div>
+				<div class="col-md-12 col-xs-12">The capstone of my educational experience, this Esri storymap delves into the early history of the Lutheran Church-Missouri Synod in Saint Louis, and how it has grown and changed over time.</div>
+				<div class="col-md-6 col-xs-12"><img src="assets/LCMS_2.png" width="100%" height="100%"></div>
+				<div class="col-md-6 col-xs-12"><img src="assets/LCMS_3.png" width="100%" height="100%"></div>
+				<div class="col-md-12 col-xs-12">This project allowed me to expand my sights and abilities, learning new skills to communicate ideas. History is a lot like maps- they both show where we've been, how we got to where we are, and can help us understand where we're going in the future.
+					Working with Esri storymaps was a new experience, and allowed me to explore new tools for creating maps, visualizing data, and telling storys. 
+					The combination of textual information, visualized spatial data, and interaction works together extremely effectively to tell these kinds of stories.
+					I know I can create many more informative and powerful stories with this format, and look forward to doing so.
+					<a href="https://storymaps.arcgis.com/stories/7f34737e87ef41e2b26135c32ef9c75c">The project can be viewed in its entirety here.</a> Enjoy!
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-6 col-xs-12"><img src="assets/Beer_1.png" width="100%" height="100%"></div>
 				<div class="col-md-6 col-xs-12"><img src="assets/Beer_2.png" width="100%" height="100%"></div>
 				<div class="col-md-12 col-xs-12">Good food and drink is always welcome, but great craft beer is a particular favorite of mine. 
