--- a/Portfolio.html
+++ b/Portfolio.html
@@ -31,6 +31,8 @@
 				</li>
 				<li><a href="Portfolio.html">Portfolio</a>
 				</li>
+				<li><a href="https://storymaps.arcgis.com/stories/7f34737e87ef41e2b26135c32ef9c75c" target="_blank">Capstone</a>
+				</li>
 			</ul>
 		</nav>
         <p>
@@ -49,7 +51,7 @@
 					Working with Esri storymaps was a new experience, and allowed me to explore new tools for creating maps, visualizing data, and telling storys. 
 					The combination of textual information, visualized spatial data, and interaction works together extremely effectively to tell these kinds of stories.
 					I know I can create many more informative and powerful stories with this format, and look forward to doing so.
-					<a href="https://storymaps.arcgis.com/stories/7f34737e87ef41e2b26135c32ef9c75c">The project can be viewed in its entirety here.</a> Enjoy!
+					<a href="https://storymaps.arcgis.com/stories/7f34737e87ef41e2b26135c32ef9c75c" target="_blank">The project can be viewed in its entirety here,</a>  or via the Capstone tab above. Enjoy!
 				</div>
 			</div>
 			<div class="row">
