--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 				</li>
 				<li><a href="Portfolio.html">Portfolio</a>
 				</li>
+				<li><a href="https://storymaps.arcgis.com/stories/7f34737e87ef41e2b26135c32ef9c75c" target="_blank">Capstone</a>
+				</li>
 			</ul>
 		</nav>
         <p>
