--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 			Thank you for viewing this page, and I hope you will also work towards a better tomorrow.
 		</p>
 		<!--Intro as well as resume so people get an immediate solid idea of who I am-->
-		<div class="col-md-12 col-xs-12"><img src="assets/Resume_2.png" width=100% height="100%"></div>
-		<p>As you can see, I've had a very diverse background in both education and work, which has given me the opportunity to visit many different places and analyze from many different angles.
+		<div class="col-md-12 col-xs-12"><img src="assets/Philip_Resume.png" width=100% height="100%"></div>
+		<p>I've had an extremely diverse background in both education and work, which has given me the opportunity to visit many different places and analyze from many different angles.
+			This diversity has also required me to adapt to a variety of situations, adjusting my workflow and utilizing all of my critical thinking and problem solving skills to accomplish the desired goal.
 			This has allowed me to broaden my worldview, and has benefited my work significantly.
 		My resume can be viewed separately <a href="assets/Philip_Resume.pdf">here</a>.
 		</p>
