--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,6 +33,8 @@
 				</li>
 				<li><a href="https://storymaps.arcgis.com/stories/7f34737e87ef41e2b26135c32ef9c75c" target="_blank">Capstone</a>
 				</li>
+				<li><a href="https://www.linkedin.com/in/philip-b-7b8b431a7/" target="_blank">LinkedIn</a>
+				</li>
 			</ul>
 		</nav>
         <p>
@@ -80,7 +82,7 @@
 			</div>
 			<div class="row">
 					<div class="col-md-6 col-xs-12"><img src="assets/Trash_Suggestion_Produced.png" width="100%" height="100%"></div>
-					<div class="col-md-6 col-xs-12"><img src="assets/Waste_Bank_Locations.png" width="100%" height="100%"></div>
+					<div class="col-md-6 col-xs-12"><img src="assets/Waste_Bank_Locations.PNG" width="100%" height="100%"></div>
 					<div class="col-md-12 col-xs-12">These maps are outputs from a team project I worked on focusing on the problem of waste management in Jakarta, Indonesia. 
 						By analyzing how much trash was produced in the city, and where people produced it, we determined which trash collection locations were under the greatest strain. 
 						From there, we were able to suggest additional trash collection locations to ease the strain and manage the waste more effectively. 
@@ -100,7 +102,8 @@
 		</div>
 		<!--Footer with contact info, same as index-->
 		<footer>
-				<p>For any inquires, questions, or comments, feel free to contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
+				<p>For any inquires, questions, or comments, feel free to <a href="https://www.linkedin.com/in/philip-b-7b8b431a7/">connect with me on LinkedIn </a>
+					or contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
 		</footer>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
