--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 				</li>
 				<li><a href="https://storymaps.arcgis.com/stories/7f34737e87ef41e2b26135c32ef9c75c" target="_blank">Capstone</a>
 				</li>
+				<li><a href="https://www.linkedin.com/in/philip-b-7b8b431a7/" target="_blank">LinkedIn</a>
+				</li>
 			</ul>
 		</nav>
         <p>
@@ -51,7 +53,8 @@
 		</p>
 		<!--Add resume for download, separate viewing if desired, also contact info for email-->
 		<footer>
-			<p>For any inquires, questions, or comments, please feel free to contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
+			<p>For any inquires, questions, or comments, feel free to <a href="https://www.linkedin.com/in/philip-b-7b8b431a7/">connect with me on LinkedIn </a>
+				or contact me at <a href="mailto:philip.bliese@gmail.com">philip.bliese@gmail.com</a></p>
 		</footer>
 		</div>
 		<!--you can also use this space for internal scripts or stylesheets;
