--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</ul>
 		</nav>
         <p>
-			Glad you could make it! I'm Philip, a masters student at the University of Wisconsin- Madison, interested in geospatial data and visualization.  
+			Glad you could make it! I'm Philip, a masters graduate from the University of Wisconsin- Madison, interested in geospatial data and visualization.  
 			I've always enjoyed geography, but during high school I became significantly more invested in geography and GIS, which has led me to today.
 			I seek to help move the world forward, in terms of both compiling and analyzing geospatial data, as well as by representing it through maps and other visualization.
 			Through maps, a driving force for change, we can visualize the world as it's been, as it is, and how it could be. 
